added layout changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,16 @@
 
 
     <color name="black">#000000</color>
-    <color name="dark_grey">#212121</color>
+    <color name="dark_grey">#424242</color>
+    <color name="grey">#616161</color>
     <color name="light_grey">#BDBDBD</color>
     <color name="white">#FFFFFF</color>
-    <color name="green">#B9F6CA</color>
+    <color name="green">#00E676</color>
     <color name="red">#FF8A80</color>
-
-
+    <color name="navy">#01579B</color>
+    <color name="dark_blue">#0091EA</color>
+    <color name="blue">#00B0FF</color>
+    <color name="light_blue">#81D4FA</color>
+    <color name="orange">#FF5722</color>
+    <color name="smoke">#80000000</color>
 </resources>
