--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,32 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="swiper.MainActivity"
+
     >
 
-
+    <!-- this is a dummy view for onExitClick -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:onClick="onExitClick"/>
 
     <RelativeLayout
         android:id="@+id/root_layout"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="80dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/dark_grey"
-        android:padding="10dp">
-
-        <TextView
-            android:id="@+id/exit_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/exit_text_label"
-            android:textSize="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="@color/white"
-            android:clickable="true"/>
+        android:clickable="true"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/total_balance_view"
@@ -38,72 +30,120 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:padding="20dp"
-            android:text=""
-            android:textColor="@color/green"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp"
+            android:text="$4.00"
+            android:textColor="@color/dark_grey"
             android:textSize="40sp"
             />
+
+        <TextView
+            android:id="@+id/last_balance_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/total_balance_view"
+            android:layout_centerInParent="true"
+            android:text="$25.00"
+            android:textColor="@color/grey"
+            android:textSize="14sp"/>
 
         <LinearLayout
             android:id="@+id/button_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/total_balance_view"
-            android:layout_margin="10dp"
+            android:layout_below="@+id/last_balance_view"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:id="@+id/expense_btn"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:background="@color/blue"
+                android:onClick="onExpenseClicked">
 
-                <Button
-                    android:id="@+id/expense_btn"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/circle_button"
                     android:text="@string/add_expense_label"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    />
+                    android:textColor="@color/white"/>
+
             </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
 
-                <Button
-                    android:id="@+id/reset_btn"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
+            <RelativeLayout
+                android:id="@+id/reset_btn"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/light_grey"
+                android:clickable="true"
+                android:onClick="onResetClicked">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/circle_button"
                     android:text="@string/reset_total_label"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    />
+                    android:textColor="@color/white"/>
+
             </RelativeLayout>
 
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/value_input"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+        <RelativeLayout
+            android:id="@+id/input_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
             android:layout_below="@+id/button_container"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-            android:background="@color/black"
-            android:gravity="center"
-            android:inputType="numberDecimal"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:background="@color/blue">
+
+            <EditText
+                android:id="@+id/value_input"
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:background="@color/blue"
+                android:textColor="@color/white"
+                android:textSize="20sp"/>
+
+            <View
+                android:layout_below="@+id/value_input"
+                android:layout_width="140dp"
+                android:layout_height="1dp"
+                android:layout_centerHorizontal="true"
+                android:background="@color/white"/>
+
+            <RelativeLayout
+                android:id="@+id/submit"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@+id/value_input"
+                android:background="@color/blue"
+                android:clickable="true"
+                android:onClick="onSubmitClicked"
+                >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@mipmap/ic_done_white_24dp"/>
+
+            </RelativeLayout>
 
 
 
+        </RelativeLayout>
 
     </RelativeLayout>
 
