--- a/app/src/main/res/layout/balance_widget.xml
+++ b/app/src/main/res/layout/balance_widget.xml
@@ -10,7 +10,7 @@
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_grey"
+        android:background="@color/blue"
         >
 
         <TextView
@@ -21,7 +21,7 @@
             android:layout_centerVertical="true"
             android:paddingLeft="5dp"
             android:text="tap to sync"
-            android:textColor="@color/light_grey"
+            android:textColor="@color/white"
             android:clickable="true"
             android:textSize="24sp"/>
 
